[gd_scene load_steps=8 format=2]

[ext_resource path="res://Common/LevelElements/Doors/DoorBase.png" type="Texture" id=1]
[ext_resource path="res://Common/LevelElements/Doors/MovingDoor.gd" type="Script" id=2]
[ext_resource path="res://Common/TriggerAreas/TriggerArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://Common/LevelElements/Doors/DoorGlow.png" type="Texture" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -8, -152, 0, 0, 0, 0, -3.05176e-05, -728 )
}

[sub_resource type="CapsuleShape2D" id=3]
resource_local_to_scene = true
radius = 112.0
height = 544.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 96 )

[node name="MovingDoor" type="Path2D"]
curve = SubResource( 1 )
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="TriggerArea" parent="." instance=ExtResource( 3 )]
monitorable = false

[node name="CollisionShape2D" parent="TriggerArea" index="0"]
shape = SubResource( 3 )

[node name="PathFollow2D" type="PathFollow2D" parent="."]
rotation = -1.62338
loop = false

[node name="Door" type="KinematicBody2D" parent="PathFollow2D"]
rotation = 1.5708

[node name="Sprite" type="Sprite" parent="PathFollow2D/Door"]
texture = ExtResource( 1 )

[node name="SpriteGlow" type="Sprite" parent="PathFollow2D/Door"]
modulate = Color( 0.57, 1.16, 2.32, 1 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathFollow2D/Door"]
shape = SubResource( 2 )

[connection signal="body_entered" from="TriggerArea" to="." method="_on_TriggerArea_body_entered"]
[connection signal="body_exited" from="TriggerArea" to="." method="_on_TriggerArea_body_exited"]

[editable path="TriggerArea"]
